--- a/index.html
+++ b/index.html
@@ -56,14 +56,45 @@
                             <h2>DevOps</h2>
                         
                     </section>
-                    <section data-background="images/slapsgiving.jpg" class="text">
-                            <h2>We all dreamed to this one time!</h2>                        
+                    <!-- http://wac.450f.edgecastcdn.net/80450F/screencrush.com/files/2013/02/HOW-I-MET-YOUR-MOTHER-Season-8-Episode-17-The-Ashtray-4.jpg -->
+                    <section data-background="images/barney-party.jpg" class="text">
+                            <strong>Culture</strong>                        
+                            <strong>Automation</strong>                                                    
+                            <h2>We got values</h2>                        
+                            <strong>Measurement</strong>                        
+                            <strong>Sharing</strong>                        
+
+                    </section>
+                    <!-- http://wwwimage.cbsstatic.com/base/files/blog/barneysblog_marquee_20111031.jpg -->
+                    <section data-background="images/barney-robin.jpg" class="text">
+                      <h2>Culture</h2>
+                      <em>Dev & Ops not Dev Vs. Ops</em>                        
+                    </section>
+                    <!-- http://memegenerator.net/instance/41070024 -->
+                    <section data-background="images/barney-automation.jpg" class="text">
+                      <h2>Automation</h2>                      
+                    </section>
+                    <!-- http://mellywilliams.files.wordpress.com/2010/08/marshall-himym.png -->
+                    <section data-background="images/marshall-pies.png" class="text">
+                      <h2>Measurement</h2>                      
+                    </section>
+                    <!-- http://images.teamsugar.com/files/users/1/13839/20_2007/95932_D0365bb.jpg -->
+                    <section data-background="images/marshall-lilly.jpg" class="text">
+                      <h2>Sharing</h2>                      
                     </section>
                 </section>
 
                 <section>
-                    <section class="text">
+                    <!-- http://sd.keepcalm-o-matic.co.uk/i/keep-calm-and-just-suit-up.png -->
+                    <section data-background="images/keep-calm-and-just-suit-up.png" class="text" >
                             <h1>Conclusion</h1>                          
+                    </section>
+                </section>
+                <section>
+                    <sectionclass="text" >
+                            <h1>Daniel Petisme</h1>                          
+                            <h3>@danielpetisme</h3>                          
+                            <h3>daniel.petisme@gmail.com</h3>                          
                     </section>
                 </section>
             </div>
