--- a/index.html
+++ b/index.html
@@ -77,27 +77,29 @@
                       <em>OPS who are DEVS who like<br />
                           DEVS to be OPS who do<br/ > 
 						  OPS like they're DEVS who do<br/ >
-						  DEV like they're OPS always<br/
+						  DEV like they're OPS always<br/>
    					      should be SOMEONE YOU REALLY LOVE</em>                        
                     </section>
-                    <!-- http://memegenerator.net/instance/41070024 -->
-                    <section data-background="images/barney-automation.jpg" class="text">
-                      <h2>Automation</h2>                      
+                    <!-- http://images2.fanpop.com/images/photos/4500000/Barney-s-Board-how-i-met-your-mother-4556672-1280-720.jpg -->
+                    <section data-background="images/barney-board.jpg" class="text">
+                      <h2>Automation</h2> 
+                      <strong>83% of deployment failures are due to lack of automation</strong>
+                      <em>True Story</em>
                     </section>
                     <!-- http://mellywilliams.files.wordpress.com/2010/08/marshall-himym.png -->
-                    <section data-background="images/marshall-pies.png" class="text">
+                    <section data-background="images/marshall-himym.png" class="text">
                       <h2>Measurement</h2>                      
                     </section>
-                    <!-- http://images.teamsugar.com/files/users/1/13839/20_2007/95932_D0365bb.jpg -->
-                    <section data-background="images/marshall-lilly.jpg" class="text">
+                    <!-- http://1.bp.blogspot.com/-LB5GURA6OyE/UT9iGHzs5AI/AAAAAAAAAYE/J7BMyKxQZS8/s640/marshall-and-lily.jpg -->
+                    <section data-background="images/marshall-and-lily.jpg" class="text">
                       <h2>Sharing</h2>                      
                     </section>
                 </section>
 
                 <section>
-                    <!-- http://sd.keepcalm-o-matic.co.uk/i/keep-calm-and-just-suit-up.png -->
-                    <section data-background="images/keep-calm-and-just-suit-up.png" class="text" >
-                            <h1>Conclusion</h1>                          
+                    <!-- http://sin.stb.s-msn.com/i/B2/D56EEA1913B043760C8F3F3F69885.jpg -->
+                    <section data-background="images/barney.jpg" class="text" >
+                            <h1>Conclusion</h1>                                                      
                     </section>
                 </section>
                 <section>
