--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 					  <span><strong>Dev</strong></span>
 					  <span><strong>|</strong></span>
 					  <span><strong>Ops</strong></span>					  
-					  <span><strong> = 3 knowledge silos</strong></span>	
+					  <br/>
+					  <span><strong>3 knowledge silos + 2 wall of confusions</strong></span>	
                       </div>						
                     </section>
                     
@@ -51,6 +52,11 @@
                           <h2>So this is how I did better soft.</h2>                           
                           <h2>The end...</h2>                                                
                     </section>
+					<!-- http://1-ps.googleusercontent.com/x/www.tvfanatic.com/static.tvfanatic.com/images/gallery/500x312xted-slaps-barney.jpg.pagespeed.ic.dL8YFtTPUW.jpg -->
+					<section data-background="images/ted-slap.jpg" class="text">
+                          <h2>No!!! Isn't finished</h2>                           
+                          <h1>Best App. Ever <strong>NOT</strong> in Prod = <strong>USELESS</strong></h1>                                                
+                    </section>
                 </section>
 
                 <!-- http://www.glamour.com/sex-love-life/blogs/smitten/2012/05/01/0501-himym-ted-and-robin_sm.jpg -->
@@ -65,11 +71,13 @@
                     </section>
                     <!-- http://wac.450f.edgecastcdn.net/80450F/screencrush.com/files/2013/02/HOW-I-MET-YOUR-MOTHER-Season-8-Episode-17-The-Ashtray-4.jpg -->
                     <section data-background="images/barney-party.jpg" class="text">
-                            <span><strong>Culture</strong></span>
-							<span><strong>Automation</strong></span>
-                            <h2>We got values</h2>                        
-							<span><strong>Measurement</strong></span>
-							<span><strong>Sharing</strong></span>
+                            <h3 class="left"><strong>C</strong>ulture</h3>
+							<h3 class="right"><strong>A</strong>utomation</h3>
+							<br /><br />
+                            <h2 class="clear">Values</h2>                        
+							<br/><br />
+							<h3 class="left"><strong>M</strong>easurement</h3>
+							<h3 class="right"><strong>S</strong>haring</h3>
                     </section>
                     <!-- http://wwwimage.cbsstatic.com/base/files/blog/barneysblog_marquee_20111031.jpg -->
                     <section data-background="images/barney-robin.jpg" class="text">
@@ -84,6 +92,7 @@
                     <section data-background="images/barney-board.jpg" class="text">
                       <h2>Automation</h2> 
                       <strong>83% of deployment failures are due to lack of automation</strong>
+					  <br/>
                       <em>True Story</em>
                     </section>
                     <!-- http://mellywilliams.files.wordpress.com/2010/08/marshall-himym.png -->
@@ -99,14 +108,26 @@
                 <section>
                     <!-- http://sin.stb.s-msn.com/i/B2/D56EEA1913B043760C8F3F3F69885.jpg -->
                     <section data-background="images/barney.jpg" class="text" >
-                            <h1>Conclusion</h1>                                                      
+                            <h1>Conclusion</h1>
+                            <em><strong>DevOps</strong> = Agility to go from <strong>IDEA</strong> to <strong>VALUE</strong> as quickly as possible.</em>							
                     </section>
                 </section>
                 <section>
-                    <sectionclass="text" >
+				    <!-- http://images1.cliqueclack.com/tv/files/2010/11/wharmpess.png -->
+                    <section data-background="images/wharmpess.png" class="text" >
                             <h1>Daniel Petisme</h1>                          
                             <h3>@danielpetisme</h3>                          
-                            <h3>daniel.petisme@gmail.com</h3>                          
+                            <h3>daniel.petisme@gmail.com</h3>
+                            <pre><code class="smaller">							
+/*
+ * -------------------------------------------------------------
+ * "THE BEER-WARE LICENSE" (Revision 42):
+ * daniel.petisme@gmail.com wrote this presentation.
+ * If we meet some day, and you think this stuff is worth it,
+ * you can buy me a beer in return Daniel Petisme
+ * -------------------------------------------------------------
+ */
+ </code></pre>
                     </section>
                 </section>
             </div>
