--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </section>
 					<!-- http://1-ps.googleusercontent.com/x/www.tvfanatic.com/static.tvfanatic.com/images/gallery/500x312xted-slaps-barney.jpg.pagespeed.ic.dL8YFtTPUW.jpg -->
 					<section data-background="images/ted-slap.jpg" class="text">
-                          <h2>No!!! Isn't finished</h2>                           
+                          <h2>No!!!</h2>                           
                           <h1>Best App. Ever <strong>NOT</strong> in Prod = <strong>USELESS</strong></h1>                                                
                     </section>
                 </section>
@@ -91,7 +91,7 @@
                     <!-- http://images2.fanpop.com/images/photos/4500000/Barney-s-Board-how-i-met-your-mother-4556672-1280-720.jpg -->
                     <section data-background="images/barney-board.jpg" class="text">
                       <h2>Automation</h2> 
-                      <strong>83% of deployment failures are due to lack of automation</strong>
+                      <strong>83% of deployment failures are due to a lack of automation</strong>
 					  <br/>
                       <em>True Story</em>
                     </section>
@@ -109,7 +109,7 @@
                     <!-- http://sin.stb.s-msn.com/i/B2/D56EEA1913B043760C8F3F3F69885.jpg -->
                     <section data-background="images/barney.jpg" class="text" >
                             <h1>Conclusion</h1>
-                            <em><strong>DevOps</strong> = Agility to go from <strong>IDEA</strong> to <strong>VALUE</strong> as quickly as possible.</em>							
+                            <em><strong>DevOps</strong> = Extend <strong>AGILITY</strong> to go from <strong>IDEA</strong> to <strong>VALUE</strong> as quickly as possible.</em>							
                     </section>
                 </section>
                 <section>
